[package]
name = "readmacho"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
num-traits = "0.2.14"
num-derive = "0.3.3"
atom-macho = { path = ".." }
clap = { version = "3.1.8", features = ["derive"] }
miniserde = "0.1.24"

[dev-dependencies]
mach_object = "0.1.14"
